[gd_scene load_steps=16 format=2]

[ext_resource path="res://sources/themes/font_size/main_62.tres" type="DynamicFont" id=1]
[ext_resource path="res://sources/themes/font_size/main_26.tres" type="DynamicFont" id=2]
[ext_resource path="res://sources/themes/button/hover.tres" type="StyleBox" id=3]
[ext_resource path="res://sources/themes/button/pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://sources/themes/button/normal.tres" type="StyleBox" id=5]
[ext_resource path="res://sources/themes/button/disabled.tres" type="StyleBox" id=6]
[ext_resource path="res://sources/themes/option_button/normal.tres" type="StyleBox" id=7]
[ext_resource path="res://sources/themes/option_button/pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://sources/themes/popup_menu/hover.tres" type="StyleBox" id=9]
[ext_resource path="res://sources/themes/option_button/hover.tres" type="StyleBox" id=10]
[ext_resource path="res://sources/themes/popup_menu/panel.tres" type="StyleBox" id=11]
[ext_resource path="res://scripts/scenes/sub_scenes/settings.gd" type="Script" id=12]

[sub_resource type="Theme" id=5]
default_font = ExtResource( 2 )
PopupMenu/styles/hover = ExtResource( 9 )
PopupMenu/styles/panel = ExtResource( 11 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="back" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -492.0
margin_right = 300.0
margin_bottom = -92.0
rect_min_size = Vector2( 600, 400 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_language" type="HBoxContainer" parent="vbox"]
margin_right = 600.0
margin_bottom = 40.0
custom_constants/separation = 10
alignment = 1

[node name="name_language" type="Label" parent="vbox/box_language"]
margin_left = 206.0
margin_right = 293.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Language"
valign = 1

[node name="OptionButton" type="OptionButton" parent="vbox/box_language"]
margin_left = 303.0
margin_right = 394.0
margin_bottom = 40.0
theme = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "English"
items = [ "English", null, false, 0, null, "Russian", null, false, 1, null ]
selected = 0

[node name="box_sensitivity" type="HBoxContainer" parent="vbox"]
margin_top = 60.0
margin_right = 600.0
margin_bottom = 100.0
custom_constants/separation = 10
alignment = 1

[node name="name_sensitivity" type="Label" parent="vbox/box_sensitivity"]
margin_left = 101.0
margin_right = 199.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Sensitivity"
valign = 1

[node name="HSlider" type="HSlider" parent="vbox/box_sensitivity"]
margin_left = 209.0
margin_right = 409.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = 0.05
max_value = 2.0
step = 0.01
value = 0.05
tick_count = 10

[node name="sens_text" type="Label" parent="vbox/box_sensitivity"]
margin_left = 419.0
margin_right = 499.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "0.00"
align = 1
valign = 1

[node name="box_fullscreen" type="HBoxContainer" parent="vbox"]
margin_top = 120.0
margin_right = 600.0
margin_bottom = 160.0
custom_constants/separation = 10
alignment = 1

[node name="name_fullscreen" type="Label" parent="vbox/box_fullscreen"]
margin_left = 235.0
margin_right = 330.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"
valign = 1

[node name="CheckBox" type="CheckBox" parent="vbox/box_fullscreen"]
margin_left = 340.0
margin_right = 364.0
margin_bottom = 40.0

[node name="box_vsync" type="HBoxContainer" parent="vbox"]
margin_top = 180.0
margin_right = 600.0
margin_bottom = 220.0
custom_constants/separation = 10
alignment = 1

[node name="name_vsync" type="Label" parent="vbox/box_vsync"]
margin_left = 255.0
margin_right = 310.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Vsync"
valign = 1

[node name="check_vsync" type="CheckBox" parent="vbox/box_vsync"]
margin_left = 320.0
margin_right = 344.0
margin_bottom = 40.0

[node name="box_perfomance_monitor" type="HBoxContainer" parent="vbox"]
margin_top = 240.0
margin_right = 600.0
margin_bottom = 280.0
custom_constants/separation = 10
alignment = 1

[node name="name_perfomance_monitor" type="Label" parent="vbox/box_perfomance_monitor"]
margin_left = 188.0
margin_right = 377.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Perfomance Monitor"
valign = 1

[node name="check_perfomance_monitor" type="CheckBox" parent="vbox/box_perfomance_monitor"]
margin_left = 387.0
margin_right = 411.0
margin_bottom = 40.0

[node name="box_data" type="HBoxContainer" parent="vbox"]
margin_top = 300.0
margin_right = 600.0
margin_bottom = 350.0
custom_constants/separation = 10
alignment = 1

[node name="reset_game" type="Button" parent="vbox/box_data"]
margin_left = 145.0
margin_right = 295.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Reset Game"

[node name="reset_settings" type="Button" parent="vbox/box_data"]
margin_left = 305.0
margin_right = 455.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Reset Settings"

[node name="close" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -76.0
margin_right = 100.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="vbox/box_language/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="vbox/box_sensitivity/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="vbox/box_fullscreen/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="vbox/box_vsync/check_vsync" to="." method="_on_check_vsync_pressed"]
[connection signal="pressed" from="vbox/box_perfomance_monitor/check_perfomance_monitor" to="." method="_on_check_perfomance_monitor_pressed"]
[connection signal="pressed" from="vbox/box_data/reset_game" to="." method="_on_reset_game_pressed"]
[connection signal="pressed" from="vbox/box_data/reset_settings" to="." method="_on_reset_settings_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
